# lowpower_camera

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/button/: CMakeLists.txt  Kconfig  button_adc.c  button_gpio.c  button_matrix.c  idf_component.yml  iot_button.c
components/button/include/: button_adc.h  button_gpio.h  button_matrix.h  iot_button.h
components/esp_modem/include/: esp_modem_c_api_types.h
components/esp_modem/src/: esp_modem_c_api.cpp  esp_modem_command_library.cpp  esp_modem_dce.cpp  esp_modem_dte.cpp  esp_modem_modules.cpp  esp_modem_term_uart.cpp
components/iniparser/: CMakeLists.txt
components/iniparser/src/: iniparser.c  iniparser.h
components/led/: led_indicator.c
components/led/include/: led_indicator.h
components/mip/: CMakeLists.txt  mip.c
components/mip/inc/: mip.h
components/mm_shims/: CMakeLists.txt  Kconfig  mmhal.c  mmosal_shim_freertos_esp32.c  wlan_hal.c
components/mm_shims/include/: mmport.h
components/morselib/: CMakeLists.txt  idf_component.yml
components/morselib/include/: mbin.h  mmhal.h  mmhal_flash.h  mmhal_wlan.h  mmlog.h  mmosal.h  mmwlan.h  mmwlan_regdb.def
components/struct2json/: CMakeLists.txt
components/struct2json/demo/: my_struct_2_json.inc
main/: CMakeLists.txt  camera.c  camera.h  cat1.c  cat1.h  config.c  config.h  debug.c  debug.h  http.c  http.h  http_client.c  http_client.h  iot_mip.c  iot_mip.h  main.c  misc.c  misc.h  morse.c  morse.h  mqtt.c  mqtt.h  net_module.c  net_module.h  ota.c  ota.h  ping.c  pir.c  pir.h  sleep.c  sleep.h  smtp_client.c  smtp_client.h  storage.c  storage.h  system.c  system.h  utils.c  utils.h  wifi.c  (+3 more)
main/web/: README.md  addTimestamp.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
(+29 files in other folders)
